external-crates/move/crates/move-compiler/tests/move_check/naming/unbound_module_name.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_module_name.move:7:17
  │
7 │         let x = N::c; x;
  │                 ^^^^ Invalid module access. Unbound module member 'c' in module '0x42::N'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_module_name.move:8:17
  │
8 │         let y = Self::c; y;
  │                 ^^^^^^^ Unbound module member 'c' in current scope

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_module_name.move:9:13
  │
9 │         0 + N::c + Self::c;
  │             ^^^^ Invalid module access. Unbound module member 'c' in module '0x42::N'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_module_name.move:9:20
  │
9 │         0 + N::c + Self::c;
  │                    ^^^^^^^ Unbound module member 'c' in current scope
